feat(crust): Add `SimpleTokenResolver` for create api token.
Fixed `@CrustAnon` not work.
Fixed `LettuceConnectionFactory` can't inject.
Fixed `UniformHandler` can't handle custom exception.